--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="pref_unit_label">Temperature Unit</string>
     <string name="pref_unit_metric" translatable="false">metric</string>
     <string name="pref_unit_imperial" translatable="false">imperial</string>
+    <string name="pref_units_key" translatable="false">units</string>
+    <string name="pref_units_metric" translatable="false">metric</string>
+    <string name="pref_units_imperial" translatable="false">imperial</string>
 </resources>
